# gx-ocr

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_exact.txt
configs/: predict.yaml  train.yaml
configs/preset/datasets/: db.yaml
runners/: custom.ipynb  custom.py  test.ipynb  train.py
